--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AesobDebugSiteConnection": "Server=.\\;Database=Aesob_Site;User ID=kursad;Password=Asperox123.",
-    "AesobReleaseSiteConnection": "Server=37.77.4.71\\SQLEXPRESS;Database=aesob_org_tr;User ID=kursad;Password=Asperox123."
+    "AesobReleaseSiteConnection": "Server=37.77.4.71\\SQLEXPRESS;Database=ctdaesob;User ID=kursad;Password=Asperox123."
   },
   "SMSConfig": {
     "SmsUserName": "NEOTURK",
