update local db access

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AesobDebugSiteConnection": "Server=.\\;Database=Aesob_Site;User ID=kursad;Password=Asperox123.",
-    "AesobReleaseSiteConnection": "Server=37.77.4.71\\SQLEXPRESS;Database=ctdaesob;User ID=kursad;Password=Asperox123."
+    "AesobDebugSiteConnection": "Server=.\\SQLEXPRESS;Database=ctdaesob;User ID=kursad;Password=Asperox123.",
+    "AesobReleaseSiteConnection": "Server=.\\SQLEXPRESS;Database=ctdaesob;User ID=kursad;Password=Asperox123."
   },
   "SMSConfig": {
     "SmsUserName": "NEOTURK",
