--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,8 @@
     "AesobReleaseSiteConnection": "Server=37.77.4.71\\SQLEXPRESS;Database=ctdaesob;User ID=kursad;Password=Asperox123."
   },
   "SMSConfig": {
+    "TokenUserName": "ttapiuser1",
+    "TokenPassword": "ttapiuser1123",
     "SmsUserName": "antalyaesob",
     "SmsPassword": "A6D8H9K5",
     "SmsAlias": "AESOB"
