add gender filter to messages

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,7 @@
     "TokenUserName": "antalyaesob",
     "TokenPassword": "antalyaesob00!*1",
     "SmsUserName": "antalyaesob",
-    "SmsPassword": "A6D8H9K5",
+    "SmsPassword": "UbDb4oLDz",
     "SmsAlias": "AESOB"
   }
 }
